# slack_jobs

./: .gitignore  README.md  all_boards.json  ashby_boards.txt  companies.txt  crawler.py  find_sr.py  generate_script.py  get_gh_boards.py  greenhouse_boards.txt  last_run.txt  lever_boards.txt  meta_dump.html  more_boards.py  notify_jobs.py  pyproject.toml  run_greenhouse.py  run_workday_jobs.py  simplify_boards.json  smartrecruiters_boards.txt  smartrecruiters_curated.json  sr_valid_boards.json  sync_boards.py  test_apis.py  test_apis2.py  test_boards.py  test_parse.py  update_notifier.py  valid_boards.json  valid_boards_2.json  workday_boards.txt  workday_companies.yaml
.github/workflows/: scrape_jobs.yml
data/: sample_jobs.html  sample_profile.yaml
src/job_resume_agent/: __init__.py  amazon.py  ashby.py  cli.py  config.py  google.py  greenhouse.py  lever.py  llm.py  meta.py  models.py  resume.py  scraper.py  slack_notifier.py  smartrecruiters.py  workday.py  workflow.py
src/job_resume_agent.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
templates/: resume.md.j2
tests/: test_greenhouse.py  test_workday_runner.py  test_workflow.py
venv_new/: pyvenv.cfg
